Fixed Scrollbar

--- a/css/main.css
+++ b/css/main.css
@@ -36,7 +36,7 @@
 }
 
 ::-webkit-scrollbar {
-    width: 12px;
+    width: 0px;
 }
  
 ::-webkit-scrollbar-track {
